// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API > srd-rules-engine 1`] = `
[
  "ABILITIES",
  "ABILITY_FULL_NAMES",
  "ABILITY_METHODS",
  "ABILITY_NAMES",
  "ALIGNMENTS",
  "ALIGNMENT_NAMES",
  "AbilityBonusSchema",
  "AbilityFullNameSchema",
  "AbilityScoresSchema",
  "AcCalculationSchema",
  "ArmorSchema",
  "BackgroundSchema",
  "BuildError",
  "CHARACTER_CLASSES",
  "CHOICE_KINDS",
  "CURRENCIES",
  "CharacterBuildSchema",
  "CharacterSchema",
  "CharacterStateSchema",
  "ChoiceDefSchema",
  "ChoiceOptionSchema",
  "ClassSchema",
  "ConditionSchema",
  "ContentError",
  "CreationSchema",
  "DAMAGE_TYPES",
  "DEFAULT_SCORE",
  "DEFAULT_SOURCE",
  "EFFECT_CONDITIONS",
  "EFFECT_OPS",
  "EFFECT_TARGETS",
  "EffectSchema",
  "FeatGrantSchema",
  "FeatSchema",
  "GearSchema",
  "GrantsSchema",
  "ItemGrantSchema",
  "ItemInstanceSchema",
  "LanguageSchema",
  "LevelUpSchema",
  "MAGIC_ITEM_CATEGORIES",
  "MAX_ATTUNED",
  "MAX_DICE",
  "MAX_SIDES",
  "MagicItemSchema",
  "MasterySchema",
  "PATCH_OPS",
  "PackManifestSchema",
  "PatchError",
  "PatchSchema",
  "PlayActionSchema",
  "PlayError",
  "PointBuySchema",
  "PrerequisiteSchema",
  "Resolution",
  "ResourceSchema",
  "SEVERITIES",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_SCHOOLS",
  "SRD_PACK_ID",
  "STEPS",
  "STEP_TITLES",
  "SpeciesSchema",
  "SpellDefSchema",
  "SpellSchema",
  "SpellcastingSchema",
  "SubclassSchema",
  "TABLE_NAMES",
  "TABLE_SCHEMAS",
  "ToolSchema",
  "TraitSchema",
  "WeaponSchema",
  "abilityModifier",
  "abilityScore",
  "answers",
  "applyAction",
  "applyDamage",
  "applyHealing",
  "applyPatch",
  "attackRoll",
  "backgroundBonusErrors",
  "baseScoreErrors",
  "builder",
  "castSpellAttack",
  "castSpellDamage",
  "castSpellSave",
  "catalogItem",
  "characterLevel",
  "choiceIssues",
  "choiceStep",
  "classLevelKey",
  "computePlaySheet",
  "computeSheet",
  "createBuild",
  "createCatalog",
  "createState",
  "damageRoll",
  "definedEntries",
  "entityName",
  "evaluate",
  "explainStat",
  "finalScores",
  "fixedRng",
  "formatDiceExpression",
  "formatModifier",
  "isAlive",
  "isSkill",
  "issuesForLevel",
  "issuesForStep",
  "lookup",
  "mathRng",
  "mergeGrants",
  "multiclassBlockers",
  "parseBuild",
  "parseDiceExpression",
  "parseState",
  "passivePerception",
  "pointBuyCost",
  "pointBuyStatus",
  "proficiencyBonus",
  "reconcileState",
  "replaceErrors",
  "reportErrors",
  "resolve",
  "resolveAttack",
  "resolveSpellAttack",
  "resolveSpellSave",
  "roll",
  "rollAbilityScore",
  "rollAbilityScores",
  "savingThrow",
  "scriptedRng",
  "seededRng",
  "signed",
  "skillName",
  "spellAttackBonus",
  "spellSaveDc",
  "srdCatalog",
  "srdPack",
  "stat",
  "titleCase",
  "unassignedValues",
  "updateBuild",
  "validateBuild",
  "validateReferences",
  "validateState",
]
`;

exports[`public API > srd-rules-engine/http 1`] = `
[
  "createHandler",
]
`;

exports[`public API > srd-rules-engine/node 1`] = `
[
  "ABILITIES",
  "ABILITY_FULL_NAMES",
  "ABILITY_METHODS",
  "ABILITY_NAMES",
  "ALIGNMENTS",
  "ALIGNMENT_NAMES",
  "AbilityBonusSchema",
  "AbilityFullNameSchema",
  "AbilityScoresSchema",
  "AcCalculationSchema",
  "ArmorSchema",
  "BackgroundSchema",
  "BuildError",
  "CHARACTER_CLASSES",
  "CHOICE_KINDS",
  "CURRENCIES",
  "CharacterBuildSchema",
  "CharacterSchema",
  "CharacterStateSchema",
  "ChoiceDefSchema",
  "ChoiceOptionSchema",
  "ClassSchema",
  "ConditionSchema",
  "ContentError",
  "CreationSchema",
  "DAMAGE_TYPES",
  "DEFAULT_SCORE",
  "DEFAULT_SOURCE",
  "EFFECT_CONDITIONS",
  "EFFECT_OPS",
  "EFFECT_TARGETS",
  "EffectSchema",
  "FeatGrantSchema",
  "FeatSchema",
  "GearSchema",
  "GrantsSchema",
  "ItemGrantSchema",
  "ItemInstanceSchema",
  "LanguageSchema",
  "LevelUpSchema",
  "MAGIC_ITEM_CATEGORIES",
  "MAX_ATTUNED",
  "MAX_DICE",
  "MAX_SIDES",
  "MagicItemSchema",
  "MasterySchema",
  "PATCH_OPS",
  "PackManifestSchema",
  "PatchError",
  "PatchSchema",
  "PlayActionSchema",
  "PlayError",
  "PointBuySchema",
  "PrerequisiteSchema",
  "Resolution",
  "ResourceSchema",
  "SEVERITIES",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_SCHOOLS",
  "SRD_PACK_ID",
  "STEPS",
  "STEP_TITLES",
  "SpeciesSchema",
  "SpellDefSchema",
  "SpellSchema",
  "SpellcastingSchema",
  "SubclassSchema",
  "TABLE_NAMES",
  "TABLE_SCHEMAS",
  "ToolSchema",
  "TraitSchema",
  "WeaponSchema",
  "abilityModifier",
  "abilityScore",
  "answers",
  "applyAction",
  "applyDamage",
  "applyHealing",
  "applyPatch",
  "attackRoll",
  "backgroundBonusErrors",
  "baseScoreErrors",
  "builder",
  "castSpellAttack",
  "castSpellDamage",
  "castSpellSave",
  "catalogItem",
  "characterLevel",
  "choiceIssues",
  "choiceStep",
  "classLevelKey",
  "computePlaySheet",
  "computeSheet",
  "createBuild",
  "createCatalog",
  "createState",
  "damageRoll",
  "definedEntries",
  "entityName",
  "evaluate",
  "explainStat",
  "finalScores",
  "fixedRng",
  "formatDiceExpression",
  "formatModifier",
  "isAlive",
  "isSkill",
  "issuesForLevel",
  "issuesForStep",
  "loadCatalog",
  "loadContentPack",
  "lookup",
  "mathRng",
  "mergeGrants",
  "multiclassBlockers",
  "parseBuild",
  "parseDiceExpression",
  "parseState",
  "passivePerception",
  "pointBuyCost",
  "pointBuyStatus",
  "proficiencyBonus",
  "reconcileState",
  "replaceErrors",
  "reportErrors",
  "resolve",
  "resolveAttack",
  "resolveSpellAttack",
  "resolveSpellSave",
  "roll",
  "rollAbilityScore",
  "rollAbilityScores",
  "savingThrow",
  "scriptedRng",
  "seededRng",
  "serveNode",
  "signed",
  "skillName",
  "spellAttackBonus",
  "spellSaveDc",
  "srdCatalog",
  "srdPack",
  "stat",
  "titleCase",
  "unassignedValues",
  "updateBuild",
  "validateBuild",
  "validateReferences",
  "validateState",
]
`;
